<resources>
    <string name="app_name">ANDROID HIVE</string>
    <string name="logo_app_counter">Logo do app Counter</string>
    <string name="counter">Counter</string>
    <string name="logo_app_shuffle_pictures">Logo do app Shuffle Pictures</string>
    <string name="shuffle_picture">Shuffle Picture</string>
    <string name="logo_app_take_picture">Logo do app Take Picture</string>
    <string name="take_picture">CamGrant</string>
    <string name="novo_app_em_breve">Novo app em breve</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="btn_return">Return</string>

    <!-- STRINGS APP COUNTER -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="the_counter">THE COUNTER</string>

    <!-- STRINGS APP SHUFFLE -->
    <string name="text_button">Image Sorter</string>
    <string name="image_content_description">Shuffle Images</string>
    <string name="shuffle_pictures">SHUFFLE PICTURES</string>

    <!-- STRINGS APP CAMGRANT -->
    <string name="camera">Camera</string>
    <string name="take_photo">"Take a Photo"</string>
    <string name="foto_atual">Foto atual</string>
    <string name="camera_message">Take Photo</string>
    <string name="camera_permission">"Camera access is needed to take photos."</string>
</resources>