<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:padding="16dp"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName">

            <LinearLayout
                android:id="@+id/btnCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/logoCounter"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo_app_counter"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_logo_counter"
                    />

                <TextView
                    android:id="@+id/titleCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/counter"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnShuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/logoShuffle"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo_app_shuffle_pictures"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_logo_shuffle" />

                <TextView
                    android:id="@+id/titleShuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/shuffle_picture"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/logoTakePicture"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo_app_take_picture"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_logo_camera" />

                <TextView
                    android:id="@+id/titleTakePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/take_picture"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnComingSoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/logoConstruction"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/novo_app_em_breve"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_logo_construction" />

                <TextView
                    android:id="@+id/titleConstruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/coming_soon"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>










